fixed text alignment

--- a/client/src/components/home/home.css
+++ b/client/src/components/home/home.css
@@ -196,6 +196,5 @@
   .about-me {
     margin-top: 9rem;
     width: 40%;
-    margin-left: calc(50% - 380px);
   }
 }
